--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,5 +17,5 @@ jobs:
       - name: Run JMeter Tests
         uses: rbhadti94/apache-jmeter-action@v0.3.1
         with:
-          testFilePath: test.jmx
+          testFilePath: tests/test.jmx
           outputReportsFolder: reports/
